force-app/main/default/objects/TT_Release_Signoff__c/TT_Release_Signoff__c.object-meta.xml
<CustomObject>
    <label>TT Release Signoff</label>
    <nameField>
        <displayFormat>RS-{YYYY}{MM}{DD}{00}</displayFormat>
        <label>TT Release Signoff Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TT Release Signoffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>