force-app/main/default/objects/TT_Release_Signoff__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person whose approval this record captures</description>
    <inlineHelpText>The person whose approval this record captures</inlineHelpText>
    <label>Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TT Release Signoffs</relationshipLabel>
    <relationshipName>TT_Release_Signoffs</relationshipName>
    <type>Lookup</type>
</CustomField>