force-app/main/default/objects/TT_Release_Signoff__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Approver notes — conditions, concerns, or confirmation details</description>
    <inlineHelpText>Approver notes — conditions, concerns, or confirmation details</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>