force-app/main/default/objects/TT_Release_Signoff__c/fields/Release_Signoff_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Signoff_Name__c</fullName>
    <description>Auto-name or descriptive: &apos;Tech Lead Approval — Sprint 14</description>
    <inlineHelpText>Auto-name or descriptive: &apos;Tech Lead Approval — Sprint 14</inlineHelpText>
    <label>Release Signoff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>