force-app/main/default/objects/TT_Release_Signoff__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Sign-off order (1 = must approve first). Leave null for parallel approvals</description>
    <inlineHelpText>Sign-off order (1 = must approve first). Leave null for parallel approvals</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>