force-app/main/default/objects/TT_Release_Signoff__c/fields/Signed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date_Time__c</fullName>
    <description>Auto-populated by Flow when Status changes to Approved or Rejected</description>
    <inlineHelpText>Auto-populated by Flow when Status changes to Approved or Rejected</inlineHelpText>
    <label>Signed Date Time</label>
    <type>DateTime</type>
</CustomField>