force-app/main/default/objects/TT_Release_Signoff__c/fields/TT_Release__c.field-meta.xml
<CustomField>
    <fullName>TT_Release__c</fullName>
    <description>Release for which signoff is defined</description>
    <inlineHelpText>Release for which signoff is defined</inlineHelpText>
    <label>TT Release</label>
    <referenceTo>TT_Release__c</referenceTo>
    <relationshipLabel>TT Release Signoffs</relationshipLabel>
    <relationshipName>TT_Release_Signoffs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>